# OctoBot-Stromberg-Tentacles

./: README.md  metadata.yaml  pyproject.toml
scripts/: pack.py  update.py
src/extra_volatility_evaluator/: __init__.py  metadata.json  volatility.py
src/extra_volatility_evaluator/config/: ATRVolatilityEvaluator.json
src/extra_volatility_evaluator/resources/: ATRVolatilityEvaluator.md
